<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_assessment_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/base_hook_24"
            android:title="@string/menu_fishes" />
        <item
            android:id="@+id/nav_fishing_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_backpack_24"
            android:title="@string/menu_fishing_trip" />
        <item
            android:id="@+id/nav_fishing_grounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_bathtub_24"
            android:title="@string/menu_fishing_ground" />
        <item
            android:id="@+id/nav_fish_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_badge_24"
            android:title="@string/menu_fish_species" />
    </group>
</menu>